// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management list item component renders item with multiple comments 1`] = `
<div
  class="card js-design-list-item"
  id="1"
>
  <div
    class="card-body p-0"
  >
    <img
      alt="test"
      class="block ml-auto mr-auto design-img"
      height="230"
      src="http://via.placeholder.com/300"
    />
  </div>
   
  <div
    class="card-footer d-flex"
  >
    <div
      class="d-flex flex-column"
    >
      <span
        class="bold"
      >
        test
      </span>
       
      <span>
        Updated 
        <timeago-stub
          cssclass=""
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="ml-auto d-flex align-items-center text-secondary"
    >
      <icon-stub
        cssclasses=""
        name="comments"
        size="16"
      />
       
      <span
        aria-label="2 comments"
        class="ml-1"
      >
        
        2
      
      </span>
    </div>
  </div>
</div>
`;

exports[`Design management list item component renders item with single comment 1`] = `
<div
  class="card js-design-list-item"
  id="1"
>
  <div
    class="card-body p-0"
  >
    <img
      alt="test"
      class="block ml-auto mr-auto design-img"
      height="230"
      src="http://via.placeholder.com/300"
    />
  </div>
   
  <div
    class="card-footer d-flex"
  >
    <div
      class="d-flex flex-column"
    >
      <span
        class="bold"
      >
        test
      </span>
       
      <span>
        Updated 
        <timeago-stub
          cssclass=""
          time="01-01-2019"
          tooltipplacement="bottom"
        />
      </span>
    </div>
     
    <div
      class="ml-auto d-flex align-items-center text-secondary"
    >
      <icon-stub
        cssclasses=""
        name="comments"
        size="16"
      />
       
      <span
        aria-label="1 comment"
        class="ml-1"
      >
        
        1
      
      </span>
    </div>
  </div>
</div>
`;
